# trabalho-1-CN

./: .dockerignore  .gitignore  README.md  docker-compose.yml  init.sql  teste_api.sh
.benchmarks/20260418-211416/: summary.tsv
.benchmarks/20260418-211614/: summary.tsv
deploy/: deploy.py
dummy_worker/: Dockerfile  main.py  pyproject.toml
local/: autoscaling_demo.py  aws_waiters.py  constants.py  create.py  create_infra.py  delete.py  deploy.py  diagnose_autoscaling_alarms.py  fault_tolerance_demo.py  load.py  pre_deploy_setup.sh  pyproject.toml  schema.sql  sim_client.py  sim_delivery.py  validate_endpoints.py
services/api/: .env  Dockerfile  main.py  models.py  pyproject.toml  rest.py
shared/: pyproject.toml
simulation_results/: sim_rps100_users1000_dur300_20260421_130741.csv  sim_rps10_users1000_dur300_20260421_001200.csv  sim_rps10_users1000_dur300_20260421_001626.csv  sim_rps10_users1000_dur300_20260421_093655.csv  sim_rps10_users1000_dur300_20260421_103342.csv  sim_rps10_users1000_dur300_20260421_121654.csv  sim_rps200_users1000_dur300_20260421_125135.csv  sim_rps50_users1000_dur300_20260421_002259.csv  sim_rps50_users1000_dur300_20260421_094340.csv  sim_rps50_users1000_dur300_20260421_100056.csv  sim_rps50_users1000_dur300_20260421_104331.csv  sim_rps50_users1000_dur300_20260421_105631.csv  sim_rps50_users1000_dur300_20260421_110934.csv  sim_rps50_users1000_dur300_20260421_112216.csv  sim_rps50_users1000_dur300_20260421_113614.csv  sim_rps50_users1000_dur300_20260421_115051.csv  sim_rps50_users1000_dur300_20260421_120353.csv
(+14 files in other folders)
