[project]
name = "local"
version = "0.1.0"
description = "Scripts locais de simulação, carga e setup do DijkFood"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "boto3",
    "faker",
    "networkx",
    "numpy",
    "osmnx",
    "python-dotenv",
    "psycopg2-binary"
]

[tool.uv]
managed = true